Fix error message in SBE date validation

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: Query Execution
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2025-07-07
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A recent change to src/mongo/db/query/stage_builder/sbe/gen_expression.cpp (commit abc17d4fa2fb25d8bdc6d0d5a787386e3ad9ee15 unintentionally modified an error message in the date validation code.
      This makes the jstests/aggregation/expressions/date_from_parts.js aggregation test fail with error message

      "Executor error during aggregate command on namespace: test.dateFromParts :: caused by :: 'month' must must evaluate to a value in the range [-32768, 32767]"
      

      However, the expected error message is

      "Executor error during aggregate command on namespace: test.dateFromParts :: caused by :: 'month' must evaluate to a value in the range [-32768, 32767]"
      

            Assignee:
            Jan Steemann
            Reporter:
            Jan Steemann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: