SERVER-106951 Fix error message in SBE date validation (#37966)

GitOrigin-RevId: e97a302ac6fca6d8e417ab3730479e0908958187